--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "element-plus": "^2.8.7",
+    "pinia": "^2.2.6",
     "vue": "^3.2.37",
     "vue-router": "^4.4.5"
   },
